--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@ body{
     
 @font-face {
     font-family: 'BigShoulders';
-   src: url('fonts/BigShouldersDisplay-Medium.ttf');
+   src: url('BigShouldersDisplay-Medium.ttf');
    font-weight: 700;
 }
 @font-face{
     font-family:'LexendDeca';
-    src: url('fonts/LexendDeca-Regular.ttf');
+    src: url('LexendDeca-Regular.ttf');
     font-weight: normal;
 }
 .clearfix{
