--- a/styles.css
+++ b/styles.css
@@ -21,16 +21,17 @@ body{
     clear: both;
 }
 #wrap-box{
-    /*max-width: 100%;
+    max-width: 100%;
     display: block;
     position: absolute;
-    margin-left: 779px;
-    margin-top: 168px;*/
-    display: flex;
+    margin-left: 405px;
+    margin-top: 168px;
+    
+    /*display: flex;
     flex-direction: row;
     justify-content: center;
     position: relative;
-    top: 80px;
+    top: 80px;*/
     
 }
 #sedans-box{
