--- a/responsive.css
+++ b/responsive.css
@@ -6,17 +6,42 @@
     }
 }
 
-@media(max-width:375px){
+@media(max-width:400px){
     body{
         width: 375px;
-        height: 1550px;
+        height: 1400px;
+        display: grid;
+        place-content: center;
+        padding: 5rem 2rem;
     }
     #wrap-box{
-        margin-top: 50px;
-        margin-left: 10%;
+        
+        display: grid;
+        place-content: center;
+        padding: 5rem 2rem;
+        margin-top: -142px;
+        margin-left: -9%;
         position: relative;
-        margin-bottom: 50px;
+        margin-bottom: -50px;
+        border-radius: 10px;
 
-
+    }
+    #sedans-box{
+        width: 300px;
+        height: 500px;
+        background: hsl(31, 77%, 52%);
+        color:  hsl(0, 0%, 95%);
+    }
+    #suvs-box{
+        width: 300px;
+        height: 500px;
+        background: hsl(184, 100%, 22%);
+        color:  hsl(0, 0%, 95%);
+    }
+    #luxury-box{
+        width: 300px;
+        height: 500px;
+        background: hsl(179, 100%, 13%);
+        color:  hsl(0, 0%, 95%);
     }
 }
