--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body{
     position: relative;
     top: 80px;
     
+    
 }
 #sedans-box{
     width: 300px;
@@ -40,6 +41,8 @@ body{
     background: hsl(31, 77%, 52%);
     float: left;
     color:  hsl(0, 0%, 95%);
+    border-radius: 15px 0px 0px 15px;
+    /*border-radius: 50px / 15px;*/
 }
 #suvs-box{
     width: 300px;
@@ -47,6 +50,7 @@ body{
     background: hsl(184, 100%, 22%);
     float: left;
     color:  hsl(0, 0%, 95%);
+    
 }
 #luxury-box{
     width: 300px;
@@ -54,6 +58,7 @@ body{
     background: hsl(179, 100%, 13%);
     float: left;
     color:  hsl(0, 0%, 95%);
+    border-radius: 0px 15px 15px 0px;
 }
 
 
