--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body{
     position: absolute;
     margin-left: 405px;
     margin-top: 168px;*/
-    
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -131,6 +131,7 @@ color:hsl(184, 100%, 22%);
 @media(max-width:936px) {
         
     body{
+        
         height: 1400px;
         display: grid;
         place-content: center;
@@ -170,7 +171,7 @@ color:hsl(184, 100%, 22%);
     }
 }
 
-@media(max-width:380px){
+@media(max-width:400px){
     body{
         width: 375px;
         height: 1400px;
